src2/objects/NES_MachineCluster__c.object
<CustomObject>
    <fields>
        <fullName>NES_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NES_Machine__c</fullName>
        <label>Asset #</label>
        <summaryForeignKey>NES_MachineClusterRelation__c.NES_MachineCluster__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NES_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Firmware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Asset Cluster</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NES_Type__c</columns>
        <columns>NES_Description__c</columns>
        <columns>NES_Machine__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>00: All Asset Clusters</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Clusters</fullName>
        <columns>NAME</columns>
        <columns>NES_Type__c</columns>
        <columns>NES_Description__c</columns>
        <columns>NES_Machine__c</columns>
        <filterScope>Mine</filterScope>
        <label>01: My Asset Clusters</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Clusters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>